2003-03-25  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-directory-view.c (fm_directory_view_display_selection_info):
	Remove Free space from status bar.
	
2003-03-25  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-directory-view.c (fm_directory_view_display_selection_info):
	Free space in status bar.

	* src/nautilus-window-manage-views.c (begin_location_change):
	Set status to " " instead to avoid status bar disappearing.
	
2003-03-25  Alexander Larsson  <alexl@redhat.com>

	* src/nautilus-window-manage-views.c (begin_location_change):
	Clear status on location change.

2003-03-25  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-directory-view.c (done_loading):
	Report selected files when done loading.
	This makes the selected files status text not stick on
	directory change.

2003-03-25  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-thumbnails.c (thumbnail_thread_start):
	Fix race on thumbnail creation. If a thumbnail was being created when the file
	was modified the request wouldn't be entered in the queue, but the created
	thumbnail has the wrong mtime.

2003-03-24  Gaute Lindkvist <lindkvis@stud.ntnu.no>

	* libnautilus-private/nautilus-file.h:
        * libnautilus-private/nautilus-file.c (nautilus_file_get_string_attribute),
	(nautilus_file_get_volume_name),
	(nautilus_file_get_volume_free_space)
	Added functions for finding volume name and free space

	* src/file-manager/fm-properties-window.c (should_show_free_space),
	(create_basic_page)
	Now shows volume name and free space
		
2003-03-24  Alexander Larsson  <alexl@redhat.com>

	* src/nautilus-window-manage-views.c (nautilus_window_reload):
	Scroll to current position on reload.

2003-03-22  Pablo Saratxaga  <pablo@mandrakesoft.com>

	* configure.in: Added Walloon (wa) to ALL_LINGUAS

2003-03-19  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-icon-container.c (select_one_unselect_others):
	Fix crash.
	