@@ -204,6 +204,9 @@ struct NautilusIconContainerDetails {
 	 */
 	Axis arrow_key_axis;
 	int arrow_key_start;
+	int arrow_key_start_x;
+	int arrow_key_start_y;
+	GtkDirectionType arrow_key_direction;
 
 	/* Mode settings. */
 	gboolean single_click_mode;
