@@ -1,3 +1,11 @@
+2003-03-26  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-icon-private.h: 
+	* libnautilus-private/nautilus-icon-container.c:
+	Fix keyboard arrow key navigation for manual layout so that you
+	can reach all icons.
+	Fix home and end for automatic layout.
+
 2003-03-25  Alexander Larsson  <alexl@redhat.com>
 
 	* src/file-manager/fm-directory-view.c (fm_directory_view_display_selection_info):
